[gd_scene load_steps=6 format=3 uid="uid://game_hud_001"]

[ext_resource type="Script" path="res://scenes/ui/game_hud.gd" id="1_hud"]
[ext_resource type="Texture2D" path="res://assets/sprites/Gold/gold_1.png" id="2_gold"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_health_bg"]
bg_color = Color(0.2, 0.2, 0.2, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_health_fill"]
bg_color = Color(1, 0.2, 0.2, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_exp_bg"]
bg_color = Color(0.2, 0.2, 0.2, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_exp_fill"]
bg_color = Color(0.2, 0.8, 0.2, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[node name="GameHUD" type="Control"]
layout_mode = 3
anchors_preset = 0
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
offset_left = 20.0
offset_top = 20.0
offset_right = 300.0
offset_bottom = 200.0
grow_horizontal = 1
grow_vertical = 1
script = ExtResource("1_hud")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 69.0
grow_horizontal = 2
grow_vertical = 1

[node name="HealthBar" type="Control" parent="VBoxContainer"]
layout_mode = 2
custom_minimum_size = Vector2(0, 30)

[node name="ProgressBar" type="ProgressBar" parent="VBoxContainer/HealthBar"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/background = SubResource("StyleBoxFlat_health_bg")
theme_override_styles/fill = SubResource("StyleBoxFlat_health_fill")
max_value = 1.0
value = 1.0
show_percentage = false

[node name="HealthLabel" type="Label" parent="VBoxContainer/HealthBar"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 15.0
grow_horizontal = 2
grow_vertical = 2
text = "52 / 52"
horizontal_alignment = 0
vertical_alignment = 1

[node name="ExpBar" type="Control" parent="VBoxContainer"]
layout_mode = 2
custom_minimum_size = Vector2(0, 30)

[node name="ProgressBar" type="ProgressBar" parent="VBoxContainer/ExpBar"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/background = SubResource("StyleBoxFlat_exp_bg")
theme_override_styles/fill = SubResource("StyleBoxFlat_exp_fill")
max_value = 1.0
value = 0.3
show_percentage = false

[node name="LevelLabel" type="Label" parent="VBoxContainer/ExpBar"]
layout_mode = 1
anchors_preset = 8
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -60.0
offset_top = -10.0
offset_right = -10.0
offset_bottom = 10.0
grow_horizontal = 0
grow_vertical = 0
text = "LV.17"
horizontal_alignment = 2

[node name="CardboardContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
custom_minimum_size = Vector2(0, 40)

[node name="CardboardIcon" type="Label" parent="VBoxContainer/CardboardContainer"]
layout_mode = 2
custom_minimum_size = Vector2(30, 30)
text = "ðŸ“¦"
horizontal_alignment = 1
vertical_alignment = 1

[node name="CardboardLabel" type="Label" parent="VBoxContainer/CardboardContainer"]
layout_mode = 2
text = "443"
horizontal_alignment = 0
vertical_alignment = 1

